# SciTagger

./: README.md  app.py  pyproject.toml
