[tool.poetry]
name = "scitagger"
version = "0.1.0"
description = "Scientific Discourse Tagging with Large Language models"
authors = ["John Giorgi <johnmgiorgi@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
langchain = "^0.0.147"
openai = "^0.27.4"
cohere = "^4.2.0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
